--- a/test.html
+++ b/test.html
@@ -236,104 +236,164 @@
 			</div>
 		</nav>
 
-		<div class="carousel-container-full">
-			<div class="carousel_slide_container slider-wrapper">
-				<ul id="slides-container" class="carousel_slide_section slides-container">
-					<li class="carousel_slide slide">
-						<div class="carousel_slide_left_container cs_cc">
-							<img class="carousel_slide_image" src="/Images/cars_showroom/2-door-green-coup_bg.png" alt="" class="carousel_img" />
+		<div class="wrapper">
+			<!-- <div class="blocker"></div> -->
+			<div class="container-outer">
+				<div class="carousel-item-container">
+					<div class="container">
+						<div class="box" id="box1">
+							<img src="/Images/test-img/860-200x300.jpg" alt="Image" />
 						</div>
-						<div class="carousel_slide_right_container cs_cc">
-							<p>hello</p>
+						<div class="box px-3 py-2" id="box2">
+							<div class="box2-header mb-3">
+								<div class="header-year ci-s1">2023 <span class="mx-1">|</span> hybrid</div>
+							</div>
+							<div class="box2-title mb-3">
+								<div class="title-car-name ci-s2">Fjord Fjusion</div>
+							</div>
+							<div class="box2-snippit">
+								<div class="snippit-text ci-s1">The car for all cars if cars could infact have cars, honestly not sure how that would work.</div>
+							</div>
+							<div class="box2-inner-container">
+								<div class="row">
+									<div class="inner-container-left col-6">
+										<div class="inner-container-left-price ci-s3">$39,999</div>
+										<div class="inner-container-left-disclaimer ci-s4">might be more, might be less *</div>
+									</div>
+									<div class="inner-container-right col-6">
+										<div class="inner-container-right-mpg ci-s3">40/35</div>
+										<div class="inner-container-right-disclaimer ci-s4">Might get 50?</div>
+									</div>
+								</div>
+								<div class="row">
+									<div class="button-container-left col-6">
+										<button class="btn-type-one">explore</button>
+									</div>
+									<div class="button-container-right col-6">
+										<button class="btn-type-two">build</button>
+									</div>
+								</div>
+							</div>
 						</div>
-					</li>
-					<li class="carousel_slide slide">
-						<div class="carousel_slide_left_container cs_cc">
-							<img class="carousel_slide_image" src="/Images/cars_showroom/2-door-green-coup_bg.png" alt="" class="carousel_img" />
+					</div>
+				</div>
+				<div class="carousel-item-container">
+					<div class="container">
+						<div class="box" id="box1">
+							<img src="/Images/test-img/860-200x300.jpg" alt="Image" />
 						</div>
-						<div class="carousel_slide_right_container cs_cc">
-							<p>hello</p>
+						<div class="box" id="box2">
+							<p>This is a paragraph in Div 2.</p>
 						</div>
-					</li>
-					<li class="carousel_slide slide">
-						<div class="carousel_slide_left_container cs_cc">
-							<img class="carousel_slide_image" src="/Images/cars_showroom/2-door-green-coup_bg.png" alt="" class="carousel_img" />
+					</div>
+				</div>
+				<div class="carousel-item-container">
+					<div class="container">
+						<div class="box" id="box1">
+							<img src="/Images/test-img/860-200x300.jpg" alt="Image" />
 						</div>
-						<div class="carousel_slide_right_container cs_cc">
-							<p>hello</p>
+						<div class="box" id="box2">
+							<p>This is a paragraph in Div 3.</p>
 						</div>
-					</li>
-					<li class="carousel_slide slide">
-						<div class="carousel_slide_left_container cs_cc">
-							<img class="carousel_slide_image" src="/Images/cars_showroom/2-door-green-coup_bg.png" alt="" class="carousel_img" />
+					</div>
+				</div>
+				<div class="carousel-item-container">
+					<div class="container">
+						<div class="box" id="box1">
+							<img src="/Images/test-img/860-200x300.jpg" alt="Image" />
 						</div>
-						<div class="carousel_slide_right_container cs_cc">
-							<p>hello</p>
+						<div class="box" id="box2">
+							<p>This is a paragraph in Div 4.</p>
 						</div>
-					</li>
-					<li class="carousel_slide slide">
-						<div class="carousel_slide_left_container cs_cc">
-							<img class="carousel_slide_image" src="/Images/cars_showroom/2-door-green-coup_bg.png" alt="" class="carousel_img" />
+					</div>
+				</div>
+				<div class="carousel-item-container">
+					<div class="container">
+						<div class="box" id="box1">
+							<img src="/Images/test-img/860-200x300.jpg" alt="Image" />
 						</div>
-						<div class="carousel_slide_right_container cs_cc">
-							<p>hello</p>
+						<div class="box" id="box2">
+							<p>This is a paragraph in Div 5.</p>
 						</div>
-					</li>
-					<li class="carousel_slide slide">
-						<div class="carousel_slide_left_container cs_cc">
-							<img class="carousel_slide_image" src="/Images/cars_showroom/2-door-green-coup_bg.png" alt="" class="carousel_img" />
+					</div>
+				</div>
+				<div class="carousel-item-container">
+					<div class="container">
+						<div class="box" id="box1">
+							<img src="/Images/test-img/860-200x300.jpg" alt="Image" />
 						</div>
-						<div class="carousel_slide_right_container cs_cc">
-							<p>hello</p>
+						<div class="box" id="box2">
+							<p>This is a paragraph in Div 6.</p>
 						</div>
-					</li>
-					<li class="carousel_slide slide">
-						<div class="carousel_slide_left_container cs_cc">
-							<img class="carousel_slide_image" src="/Images/cars_showroom/2-door-green-coup_bg.png" alt="" class="carousel_img" />
+					</div>
+				</div>
+				<div class="carousel-item-container">
+					<div class="container">
+						<div class="box" id="box1">
+							<img src="/Images/test-img/860-200x300.jpg" alt="Image" />
 						</div>
-						<div class="carousel_slide_right_container cs_cc">
-							<p>hello</p>
+						<div class="box" id="box2">
+							<p>This is a paragraph in Div 7.</p>
 						</div>
-					</li>
-					<li class="carousel_slide slide">
-						<div class="carousel_slide_left_container cs_cc">
-							<img class="carousel_slide_image" src="/Images/cars_showroom/2-door-green-coup_bg.png" alt="" class="carousel_img" />
-						</div>
-						<div class="carousel_slide_right_container cs_cc">
-							<p>hello</p>
-						</div>
-					</li>
-					<li class="carousel_slide slide">
-						<div class="carousel_slide_left_container cs_cc">
-							<img class="carousel_slide_image" src="/Images/cars_showroom/2-door-green-coup_bg.png" alt="" class="carousel_img" />
-						</div>
-						<div class="carousel_slide_right_container cs_cc">
-							<p>hello</p>
-						</div>
-					</li>
-					<li class="carousel_slide slide">
-						<div class="carousel_slide_left_container cs_cc">
-							<img class="carousel_slide_image" src="/Images/cars_showroom/2-door-green-coup_bg.png" alt="" class="carousel_img" />
-						</div>
-						<div class="carousel_slide_right_container cs_cc">
-							<p>hello</p>
-						</div>
-					</li>
-					<li class="carousel_slide slide">
-						<div class="carousel_slide_left_container cs_cc">
-							<img class="carousel_slide_image" src="/Images/cars_showroom/2-door-green-coup_bg.png" alt="" class="carousel_img" />
-						</div>
-						<div class="carousel_slide_right_container cs_cc">
-							<p>hello</p>
-						</div>
-					</li>
-				</ul>
+					</div>
+				</div>
 			</div>
 		</div>
-		<button class="slide-arrow" id="slide-arrow-prev">&#8249;</button>
-
-		<button class="slide-arrow" id="slide-arrow-next">&#8250;</button>
-
+		<div class="carousel-buttons">
+			<button class="prev-slide">Previous Slide</button>
+			<button class="next-slide">Next Slide</button>
+		</div>
+		<div class="hello-filler">
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+			<p>hello</p>
+		</div>
 		<!-- custom js -->
 		<script src="/test.js"></script>
 
