--- a/TESTING/testNewCarousel.html
+++ b/TESTING/testNewCarousel.html
@@ -84,7 +84,7 @@
 								<div class="dropdown">
 									<a href="#" class="me-3 nav-link py-2 px-0 d-none d-md-block navbar-left-text-inbar" data-bs-toggle="dropdown" aria-expanded="false">Vehicles</a>
 									<ul class="no-close-click dropdown-menu nav-dropdown-menu-left-1">
-										<li><a class="dropdown-item" href="/Index.html">MAIN PROFILE</a></li>
+										<li><a class="dropdown-item" href="/index.html">MAIN PROFILE</a></li>
 										<li><hr class="dropdown-divider" /></li>
 										<li><a class="dropdown-item" href="#">Cars</a></li>
 										<li><hr class="dropdown-divider" /></li>
