--- a/Index.html
+++ b/Index.html
@@ -533,7 +533,7 @@
 			<!-- discover and about -->
 			<div class="discover-and-about">
 				<div>
-					<h1 class="nav justify-content-center">Discover Learn Drive</h1>
+					<h1 class="nav justify-content-center">Discover Learn Drive!</h1>
 				</div>
 				<div>
 					<div>
